# agi

./: .env_example  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  relationships.yml
src/agi/: agent.py  concept.py  concepts.py  extractors.py  get_wiki.py  interaction.py  main.py  relationship_types.yml  semantic_extractor.py  wiki_connector.py
src/agi/config/: settings.py
src/agi/db/: neo4j.py  neo4j_connection.py  semantic_network.py
src/agi/templates/: answer_question_with_context.j2  cataloger_agent.j2  determine_consistency.j2  extract_concepts.j2  identify_missing_context.j2  interaction_classifier.j2  response_for_unanswerable_questions.j2  semantic_extractor.j2
tests/: helper.py  test_agent.py  test_concept_extraction.py  test_foo.py  test_interaction_classifier.py  test_semantic_extractor.py
tests/fixtures/vcr_cassettes/: test_concept_extraction[test_extract_complex_concepts].yaml  test_concept_extraction[test_extract_simple_concepts].yaml  test_interaction_classifier[test_interaction_classifier_fact].yaml  test_interaction_classifier[test_interaction_classifier_mixed].yaml  test_interaction_classifier[test_interaction_classifier_question].yaml  test_semantic_extractor[test_extract_complex_concepts].yaml  test_semantic_extractor[test_extract_simple_concepts].yaml
