[tool.poetry]
name = "agi"
version = "0.1.0"
description = ""
authors = ["gregology", "ryoung2512", "xiangshiyin"]
readme = "README.md"
packages = [{include = "agi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.4"
typer = "^0.12.3"
jinja2 = "^3.1.4"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
agi = "agi.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
